--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite preview --host 0.0.0.0 --port 10000 --strictPort"
+    "start": "serve -s dist -l $PORT"
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.1.5",
