--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^7.5.3",
     "react-spinners": "^0.14.1",
     "swiper": "^11.2.6",
-    "web3": "^4.12.1"
+    "web3": "^4.12.1",
+    "serve": "^14.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
